@@ -783,7 +783,7 @@ public class PackageReader {
 		   	
 		   	theContainer.setLayoutParams(new SnuffyLayoutParams(buttonWidth,
 		   																yPosInContainer, BUTTON_MARGINX, yPos));
-		   	processButtonButton(elPage, root, currPage, elButton, new Integer(1000+iButton), false, theContainer);
+		   	processButtonButton(elPage, root, currPage, elButton, Integer.valueOf(1000+iButton), false, theContainer);
 	        SnuffyLayoutParams lpContainer = (SnuffyLayoutParams)(theContainer.getLayoutParams());
 	        yPosInContainer = lpContainer.height; // we add to bottom of the container
 		   	
@@ -798,13 +798,13 @@ public class PackageReader {
 	        int buttonHeight = yPosInContainer;
 	       	theContainer.setLayoutParams(new SnuffyLayoutParams(buttonWidth, buttonHeight, BUTTON_MARGINX, yPos));
 	       	theContainer.setBackgroundColor(Color.TRANSPARENT);
-	        theContainer.setTag(new Integer(iTagButtonContainer));
+	        theContainer.setTag(Integer.valueOf(iTagButtonContainer));
 	       	currPage.addView(theContainer);
 	        mYOffset = yPos + yPosInContainer;
 	        
-	        processButtonPanel(elPage, root, currPage, elButton, new Integer(iButton), urlsOnpage);
+	        processButtonPanel(elPage, root, currPage, elButton, Integer.valueOf(iButton), urlsOnpage);
 	       
-			final SnuffyLayout panel = (SnuffyLayout)(currPage.findViewWithTag(new Integer(iTagButtonPanel)));
+			final SnuffyLayout panel = (SnuffyLayout)(currPage.findViewWithTag(Integer.valueOf(iTagButtonPanel)));
 			final Vector<String> finalUrlsOnPage = urlsOnpage;
 			final SnuffyPage finalCurrPage = currPage;
 			if (bAllUrlMode) {
@@ -1248,7 +1248,7 @@ public class PackageReader {
         
        	theContainer.setLayoutParams(new SnuffyLayoutParams(lpContainer.width, lpContainer.height + yPosInContainer, lpContainer.x, lpContainer.y));
         
-        theContainer.setTag(new Integer(iButton));
+        theContainer.setTag(Integer.valueOf(iButton));
 	}
 
 	private void processButtonPanel(Element elPage, Element root, SnuffyPage currPage, Element elButton, int iButton, Vector<String> urlsOnPage) {
@@ -1304,7 +1304,7 @@ public class PackageReader {
        	int yPanelTop = 50;
       	thePanel.setLayoutParams(new SnuffyLayoutParams(panelWidth, PANEL_YMARGIN + buttonHeight + containerHeight + PANEL_YMARGIN, PANEL_XMARGIN, yPanelTop));
       	thePanel.setBackgroundColor(mBackgroundColor);
-      	thePanel.setTag(new Integer(1000+iButton));
+      	thePanel.setTag(Integer.valueOf(1000+iButton));
 		thePanel.setVisibility(View.INVISIBLE); // hide it initially - will be animated into position on click on its owner button.
        	// CANT DO THIS? thePanel.setAlpha(0.0f);				// also hides it
        	
@@ -1727,7 +1727,7 @@ public class PackageReader {
         if (elPeekPanel  != null)	tvSubTitle   = createSubTitleFromElement       (elPeekPanel);
         
         final SnuffyLayout titleContainer = new SnuffyLayout(mContext);
-   		titleContainer.setTag(new Integer(560));
+   		titleContainer.setTag(Integer.valueOf(560));
 
    		final SnuffyLayout titleClippingContainer = new SnuffyLayout(mContext);
    		// contains titleContainer, subtitleContainer and their shadows
@@ -1903,7 +1903,7 @@ public class PackageReader {
     		Bitmap bmTop = getBitmapFromAssetOrFile(mContext, "grad_shad_bot.png");
     		if (bmTop != null) {
            		ImageView iv = new ImageView(mContext);
-           		iv.setTag(new Integer(561)); 
+           		iv.setTag(Integer.valueOf(561));
            		iv.setLayoutParams(new SnuffyLayoutParams(lpTitleContainer.width, getScaledYValue(bmTop.getHeight()), 	
             			lpTitleContainer.x, lpTitleContainer.y - bmTop.getHeight() + getScaledYValue(DROPSHADOW_INSETTOP)));
         		iv.setImageBitmap(bmTop);
@@ -1913,7 +1913,7 @@ public class PackageReader {
     		Bitmap bmBot = getBitmapFromAssetOrFile(mContext, "grad_shad_top.png");
     		if (bmBot != null) {
            		ImageView iv = new ImageView(mContext);
-           		iv.setTag(new Integer(562));
+           		iv.setTag(Integer.valueOf(562));
             	iv.setLayoutParams(new SnuffyLayoutParams(lpTitleContainer.width, getScaledYValue(bmBot.getHeight()),
             			lpTitleContainer.x, lpTitleContainer.y + lpTitleContainer.height - DROPSHADOW_INSETBOT));
         		iv.setImageBitmap(bmBot);
@@ -1926,7 +1926,7 @@ public class PackageReader {
 			if (bmNE != null) {
 				// grad_shad_NE_title:...
 	       		ImageView iv = new ImageView(mContext);
-	    		iv.setTag(new Integer(561));
+	    		iv.setTag(Integer.valueOf(561));
 	        	iv.setLayoutParams(new SnuffyLayoutParams(
 	        			getScaledXValue(bmNE.getWidth()), 
 	        			getScaledYValue(bmNE.getHeight()), 
@@ -1941,7 +1941,7 @@ public class PackageReader {
 	  		if (bmE != null) {
 				// grad_shad_E_title:...
 	       		ImageView iv = new ImageView(mContext);
-	    		iv.setTag(new Integer(566));
+	    		iv.setTag(Integer.valueOf(566));
 	        	iv.setLayoutParams(new SnuffyLayoutParams(
 	        			getScaledXValue(bmE.getWidth()), 
 	        			lpTitleContainer.height - getScaledYValue(bmNE.getHeight()) - DROPSHADOW_INSETY, 
@@ -1956,7 +1956,7 @@ public class PackageReader {
 	  		if (bmSE != null) {
 				// grad_shad_SE_title:...
 	       		ImageView iv = new ImageView(mContext);
-	    		iv.setTag(new Integer(563));
+	    		iv.setTag(Integer.valueOf(563));
 	        	iv.setLayoutParams(new SnuffyLayoutParams(
 	        			getScaledXValue(bmSE.getWidth()), 
 	        			getScaledYValue(bmSE.getHeight()), 
@@ -1971,7 +1971,7 @@ public class PackageReader {
 	  		if (bmS != null) {
 				// grad_shad_S_title:...
 	       		ImageView iv = new ImageView(mContext);
-	    		iv.setTag(new Integer(562));
+	    		iv.setTag(Integer.valueOf(562));
 	        	iv.setLayoutParams(new SnuffyLayoutParams(
 	        			lpTitleContainer.width - DROPSHADOW_INSETX, 
 	        			getScaledYValue(bmS.getHeight()), 
@@ -1988,7 +1988,7 @@ public class PackageReader {
     		if (bmE != null) {
     			// grad_shad_E_title:...
            		ImageView iv = new ImageView(mContext);
-        		iv.setTag(new Integer(566));
+        		iv.setTag(Integer.valueOf(566));
             	iv.setLayoutParams(new SnuffyLayoutParams(
             			DROPSHADOW_LENGTHX, 
             			lpTitleContainer.height - DROPSHADOW_INSETY - 0, 
@@ -2002,7 +2002,7 @@ public class PackageReader {
     		if (bmS != null) {
     			// grad_shad_S_title:...
            		ImageView iv = new ImageView(mContext);
-        		iv.setTag(new Integer(562));
+        		iv.setTag(Integer.valueOf(562));
             	iv.setLayoutParams(new SnuffyLayoutParams(
             			lpTitleContainer.width - DROPSHADOW_INSETX,
             			DROPSHADOW_LENGTHY,
@@ -2016,7 +2016,7 @@ public class PackageReader {
     		if (bmSE != null) {
     			// grad_shad_SE_title:...
            		ImageView iv = new ImageView(mContext);
-        		iv.setTag(new Integer(563));
+        		iv.setTag(Integer.valueOf(563));
             	iv.setLayoutParams(new SnuffyLayoutParams(
             			DROPSHADOW_LENGTHX,
             			DROPSHADOW_LENGTHY,
@@ -2039,7 +2039,7 @@ public class PackageReader {
         if (bHasPeekPanel) { //i.e. (tvSubTitle != null)
         	
             final SnuffyLayout subTitleContainer = new SnuffyLayout(mContext);
-       		subTitleContainer.setTag(new Integer(550));
+       		subTitleContainer.setTag(Integer.valueOf(550));
        	             
     		// layout subtitle container with textview and arrow
            	subTitleContainer.setBackgroundResource(R.drawable.round_botright_box);
@@ -2091,7 +2091,7 @@ public class PackageReader {
     		Bitmap bmE = getBitmapFromAssetOrFile(mContext, "grad_shad_E.png");
     		if (bmE != null) {
            		ImageView iv = new ImageView(mContext);
-        		iv.setTag(new Integer(556));
+        		iv.setTag(Integer.valueOf(556));
             	iv.setLayoutParams(lpTemp);
         		iv.setScaleType(ImageView.ScaleType.FIT_XY);
     			iv.setImageBitmap(bmE);
@@ -2111,7 +2111,7 @@ public class PackageReader {
            	Bitmap bmS = getBitmapFromAssetOrFile(mContext, "grad_shad_S.png");
        		if (bmS != null) {
           		ImageView iv = new ImageView(mContext);
-        		iv.setTag(new Integer(552));
+        		iv.setTag(Integer.valueOf(552));
             	iv.setLayoutParams(lpTemp);
             	iv.setScaleType(ImageView.ScaleType.FIT_XY);
             	iv.setImageBitmap(bmS);
@@ -2131,7 +2131,7 @@ public class PackageReader {
             Bitmap bmSE = getBitmapFromAssetOrFile(mContext, "grad_shad_SE.png");
     		if (bmSE != null) {
            		ImageView iv = new ImageView(mContext);
-        		iv.setTag(new Integer(553));
+        		iv.setTag(Integer.valueOf(553));
             	iv.setLayoutParams(lpTemp);
          		iv.setImageBitmap(bmSE);
          		iv.setScaleType(ImageView.ScaleType.FIT_XY);
@@ -2742,19 +2742,19 @@ public class PackageReader {
 	}
 
 	private void setLayoutParamsOfViewWithTag(View parentView, int tagValue, SnuffyLayoutParams lp) {
-		View v = parentView.findViewWithTag(new Integer(tagValue));
+		View v = parentView.findViewWithTag(Integer.valueOf(tagValue));
 		if (v != null)
 			v.setLayoutParams(lp);			
 	}
 
 	private void startAnimationOnViewWithTag(View parentView, int tagValue, Animation a) {
-		View v = parentView.findViewWithTag(new Integer(tagValue));
+		View v = parentView.findViewWithTag(Integer.valueOf(tagValue));
 		if (v != null)
 			v.startAnimation(a);			
 	}
 
 	private void bringSubViewWithTagToFront(View parentView, int tagValue) {
-		View v = parentView.findViewWithTag(new Integer(tagValue));
+		View v = parentView.findViewWithTag(Integer.valueOf(tagValue));
 		if (v != null)
 			v.bringToFront(); // should that be v.bringSubViewToFront() ?
 	}
